<resources>
    <string name="app_name">MTGCollectionManager</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_card_view">CardView</string>
    <string name="mana_cost">Mana Cost</string>
    <string name="card_name">Card Name</string>
    <string name="card_type">Card Type</string>
    <string name="card_text">Card text</string>
    <string name="power_and_toughness">Power and Toughness</string>
    <string name="card_image">Card image</string>
    <string name="search_title">Search</string>
</resources>
